# lego-hkm-control-app

./: .gitmodules  protocol.md  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
app/: build.gradle.kts
app/libs/comms/: CMakeLists.txt  Models.kt  ProtocolHandler.kt  regen.sh
app/libs/comms/defs/: motion_types.jl
app/libs/comms/pkg/: chan-config.in.cmake
app/src/androidTest/java/com/findingtreasure/phonependant/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/findingtreasure/comms/: Models.kt  NetworkManager.kt  ProtocolHandler.kt  network.kt
app/src/main/java/com/findingtreasure/phonependant/: GlobalState.kt  MainActivity.kt  network.kt
app/src/main/java/com/findingtreasure/phonependant/datastore/: ConnectionDataStore.kt  SettingsDataStore.kt
app/src/main/java/com/findingtreasure/phonependant/model/: Position.kt  Status.kt
app/src/main/java/com/findingtreasure/phonependant/sensor/: Accelerometer.kt
app/src/main/java/com/findingtreasure/phonependant/ui/components/: AxisSlider.kt  BouncySlider.kt  DisplayField.kt  PositionItem.kt  RobotStatusInfo.kt
app/src/main/java/com/findingtreasure/phonependant/ui/helper/: AxisSlider.kt  DisplayField.kt  TrackPath.kt
app/src/main/java/com/findingtreasure/phonependant/ui/screens/: AccelerometerInputScreen.kt  ConnectionScreen.kt  CoordinateInputScreen.kt  JointRotationScreen.kt  PositionListScreen.kt  SettingsScreen.kt
app/src/main/java/com/findingtreasure/phonependant/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/findingtreasure/phonependant/viewmodel/: ConnectionViewModel.kt  JoggingViewModel.kt  JoggingViewModelFactory.kt  SettingsViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/findingtreasure/phonependant/: ExampleUnitTest.kt
comms/: build.gradle.kts
comms/src/androidTest/java/com/findingtreasure/comms/: ExampleInstrumentedTest.kt
comms/src/main/: AndroidManifest.xml
comms/src/main/java/com/findingtreasure/comms/: CommunicationHandler.kt  Models.kt  ProtocolHandler.kt
comms/src/main/res/values/: themes.xml
comms/src/main/res/values-night/: themes.xml
comms/src/test/java/com/findingtreasure/comms/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
juliet-server/src/: .gitignore  app_server.jlt  main.jlt  robot_server.jlt  server.jlt
server/: .clang-format  CMakeLists.txt
server/include/: global.h
server/src/: CMakeLists.txt  app_server.c  main.c  robot_server.c  server.c
server/src/chan-gen-types/: CMakeLists.txt  regen.sh
server/src/chan-gen-types/defs/: motion_types.jl
server/src/chan-gen-types/gen_c/: motion_types.c  motion_types.h
